--- a/Clase 9 JS/Challenge Grupal/index.html
+++ b/Clase 9 JS/Challenge Grupal/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Table template</title>
-    <link href="minimal-table.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1>Table template</h1>
-    <table>
-      <thead>
-        <tr>
-          <td>Hola, soy tu primera celda.</td>
-          <td>Soy tu segunda celda.</td>
-          <td>Soy tu tercera celda.</td>
-          <td>Soy tu cuarta celda.</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td >Hola, soy tu primera celda.</td>
-          <td>agregarUser()</td>
-        </tr>
-      </tbody>
-    </table>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tabla Completable</title>
+</head>
+<body>
+    
+    <div class="container">
+        <h1>Ingrese los usuarios que guste</h1>
+        <form action="">
+            <input id="nombre" type="text" placeholder="Ingrese nombre"></br></br>
+            <input id="edad" type="text" placeholder="Ingrese edad"></br></br>
+            <input id="telefono" type="text" placeholder="Ingrese telefono"></br></br>
+            <input id="dni" type="text" placeholder="Ingrese DNI"></br></br>
+            <input id="pais" type="text" placeholder="Ingrese País"></br></br>
+            <button id="boton" type="reset" onclick="datos();">Agregar</button>
+            <button id="borrar" type="reset" onclick="reset();">Borrar</button>
+        </form></br></br>
+        <div class="container">
+            <table class="table" id="tabla" BORDER="" width="50%">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Edad</th>
+                        <th>Telefono</th>
+                        <th>DNI</th>
+                        <th>Pais</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Marcelo</th>
+                        <th>20</th>
+                        <th>2235556666</th>
+                        <th>44336283</th>
+                        <th>Argentina</th>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div>
+            <p>Ingrese el DNI del contacto que quiera eliminar:</p>
+            <form action="">
+                <input id="dni" type="text" placeholder="Ingrese DNI">
+                <button id="botonEliminar" type="reset" onclick="eliminarDatos();">Eliminar</button> 
+            </form></br>
+        </div>
+        <div>
+            <form action="">
+                <button id="botonOrden" type="reset" onclick="ordenarDatos();">Ordene sus datos</button>
+            </form>
+        </div>
+    </div>
 
-    <script src="main.js"></script>
-  </body>
+    <script src="./main.js"></script>
+</body>
 </html>
